--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ nav li {
     width: 15%;
     padding: 16px;
     margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Nav list item styling */
@@ -177,14 +178,25 @@ Table td{
     height: 200px
 }
 
+.carouselTagImageShop {
+    width: 400px;
+    height: 400px
+}
+
+
 .pCarousel {
    color: white; 
 }
+
+.pCarouselShop {
+    color: rgb(0, 0, 0); 
+ }
 
 /* Image gallery blur */
 #wrap:hover img:not(:hover) {
     filter: blur(5px);
 }
+
 
 
 /* Index aside styling */
@@ -196,3 +208,10 @@ Table td{
 #asideTagImage {
     float:left;
 }
+
+/* Archie Image styling */
+
+.archieImage{
+    margin:1%
+}
+
